# ficial_gate

./: CMakeLists.txt  S99_ficial_gate  database.c  database.h  face_common.h  load_feature.c  load_feature.h  main.c  play_wav.c  play_wav.h  rkcif_control.c  rkcif_control.h  rkisp_control.c  rockface_control.c  rockface_control.h  shadow_display.c  shadow_display.h  ui.c  ui.h  video_common.c  video_common.h
